# rsds

./: .gitignore  README.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/str/: ascii.rs  mod.rs  utf16.rs
crates/common/src/util/: crc.rs  file_size.rs  mod.rs
crates/emu/: Cargo.toml
crates/rom/: Cargo.toml  build.rs
crates/rom/data/: rom_list.toml
crates/rom/examples/: ndsheader.rs  ndsinfo.rs
crates/rom/src/: lib.rs  macros.rs  nds.rs
crates/rom/src/nds/: banner.rs  header.rs  mod.rs  roms.rs
crates/rom/src/nds/encrypt/: key1.rs  mod.rs
crates/rom/src/nds/info/: codes.rs  mod.rs  roms.rs
crates/rom/tests/: tiny_fb.rs
demo/: TinyFB.nds
