[package]
name = "rom"
version = "0.0.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Library for loading DS ROMs."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

build = "build.rs"

[dependencies]
common = { path = "../common" }

log = "0.4"
byteorder = "1.4"
phf = { version = "0.10", features = ["macros"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5.8"
phf_codegen = "0.10"

[dev-dependencies]
pretty_env_logger = "0.4"
